Changed a translation and fixed a formatting issue

--- a/NT Surgery Plus/Localization/German/German.xml
+++ b/NT Surgery Plus/Localization/German/German.xml
@@ -67,7 +67,7 @@
 
 <talenttree.researcher>Forscher</talenttree.researcher>
 <talenttree.hospitalizer>Hospitalisierer</talenttree.hospitalizer>
-<talenttree.fieldsurgeon>Feld Chirug</talenttree.fieldsurgeon>
+<talenttree.fieldsurgeon>Feldscher</talenttree.fieldsurgeon>
 
 <talentname.ntsp_autoimmune>Autoimmunsuppression</talentname.ntsp_autoimmune>
 <talentdescription.ntsp_autoimmune>Organe die du transplantierst, werden nie abgelehnt.</talentdescription.ntsp_autoimmune>
