--- a/Neurotutorial/Localization/German.xml
+++ b/Neurotutorial/Localization/German.xml
@@ -14,7 +14,7 @@
   <connection.subject_state_out>zustand_aus</connection.subject_state_out>
   <connection.subject_special_out>spezial_aus</connection.subject_special_out>
 
-  <roomname.simulacrum>Simulakrum/roomname.simulacrum>
+  <roomname.simulacrum>Simulakrum</roomname.simulacrum>
   <roomname.garden>Garten</roomname.garden>
 
 </infotexts>
