Attributed myself and mannatu (who probably is reponsible for the already translated stuff)

--- a/Neurotrauma/Localization/German/German.xml
+++ b/Neurotrauma/Localization/German/German.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <infotexts language="German" nowhitespace="false" translatedname="Deutsch">
+<!-- Partly translated by profole / Teilweise übersetzt von profole -->
+<!-- Some stuff was already translated, probably by Mannatu / Rest war schon übersetzt, wahrscheinlich von Mannatu -->
 
 <!-- ITEMS -->
 
