fixed an error in RU "left leg fracture" is right

--- a/Neurotrauma/Localization/Russian/Russian.xml
+++ b/Neurotrauma/Localization/Russian/Russian.xml
@@ -447,7 +447,7 @@
 <afflictiondescription.la_fracture>Ваша левая рука сломана.</afflictiondescription.la_fracture>
 <afflictionname.rl_fracture>Перелом правой бедренной кости</afflictionname.rl_fracture>
 <afflictiondescription.rl_fracture>Ваша правая нога сломана.</afflictiondescription.rl_fracture>
-<afflictionname.ll_fracture>Перелом правой бедренной кости</afflictionname.ll_fracture>
+<afflictionname.ll_fracture>Перелом левой бедренной кости</afflictionname.ll_fracture>
 <afflictiondescription.ll_fracture>Ваша левая нога сломана.</afflictiondescription.ll_fracture>
 <afflictionname.t_fracture>Сломанные рёбра</afflictionname.t_fracture>
 <afflictiondescription.t_fracture>Одно или более рёбер сломаны.</afflictiondescription.t_fracture>
